# squeue

./: .dockerignore  .gitignore  CHANGELOG.md  README.md  RELEASE_CHECKLIST.md  docker-compose.yml  pom.xml
clients/java-direct/: pom.xml
clients/java-postgres/: pom.xml
docs/: DECISIONS.md  ISSUES.md  core-schema.md  developer_quickstart.md  direct-postgres-notify.md  direct_client_onboarding.md  distributions.md  openapi.yaml  security.md  semantics.md  sequenced_queue_product_roadmap.md  simplification_strategy.md  stage3-payload-size-limits-design.md  versioning.md
docs/instructions/: Queue Implementation.md  java client.md
examples/: README.md
examples/java-direct-worker/: pom.xml
examples/java-producer/: pom.xml
examples/java-rest-worker/: pom.xml
examples/python-producer/: producer.py
examples/python-worker/: worker.py
sequenced-queue-core/: pom.xml
sequenced-queue-core/src/main/java/com/sequencedqueue/core/: AdminAuditRow.java  BlockedSourceRow.java  DefaultQueueService.java  (+25 more)
sequenced-queue-core/src/main/resources/db/migration/: V1__initial_queue_schema.sql  V2__admin_audit.sql  V3__retention_purge_audit_operation.sql  V4__retention_purge_index.sql
sequenced-queue-java-client/: pom.xml
sequenced-queue-python-client/: README.md  pyproject.toml
sequenced-queue-python-client/sequenced_queue/: __init__.py  client.py
sequenced-queue-python-client/tests/: test_client.py  test_examples.py
sequenced-queue-server/: Dockerfile  pom.xml
sequenced-queue-server/src/main/resources/: application.yml
sequenced-queue-worker-core/: pom.xml
(+91 files in other folders)
